fixing center align names

--- a/docs/style.css
+++ b/docs/style.css
@@ -12,7 +12,7 @@
   }
 
   .student_pictures figcaption {
-    justify-content: center;
+    text-align: center;
   }
   .student_pictures img{
     width: 200px; /* Adjust the width as needed */
